Began adding backend to scouting screens - human net views still need to be properly implemented, and still need to create cycles data and data without worst match (if desired)

--- a/app/src/main/res/layout/fragment_scout_post_match.xml
+++ b/app/src/main/res/layout/fragment_scout_post_match.xml
@@ -45,7 +45,7 @@
     <org.wildstang.wildrank.androidv2.views.scouting.ScoutingSpinnerView
         android:layout_width="1095dp"
         android:layout_height="wrap_content"
-        app:key="Stage"
+        app:key="stage"
         app:label="Stage"
         app:values="@array/staging"
         android:layout_above="@+id/notes"
