--- a/app/src/main/res/layout/fragment_scout_autonomous.xml
+++ b/app/src/main/res/layout/fragment_scout_autonomous.xml
@@ -170,8 +170,8 @@
             android:text="Lower Algae Removed" />
 
         <org.wildstang.wildrank.androidv2.views.scouting.ScoutingCheckboxView
-            android:id="@+id/crosslinecheckbox"
-            app:key="CrossLine"
+            android:id="@+id/exitcheckbox"
+            app:key="auto_exit"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
