--- a/app/src/main/res/layout/fragment_summaries_data.xml
+++ b/app/src/main/res/layout/fragment_summaries_data.xml
@@ -25,11 +25,11 @@
             android:textStyle="bold"
             android:text="Auto Overview" />
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataAutoStartingZone
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="How often the robot left the starting zone during Auto."
-            app:label="Auto Starting Zone" />
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataAutoStartingZone-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="How often the robot left the starting zone during Auto."-->
+<!--            app:label="Auto Starting Zone" />-->
 
         <TextView
             android:layout_width="match_parent"
@@ -38,48 +38,58 @@
             android:textStyle="bold"
             android:text="Tele Overview" />
 
-
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleMadeSpeakerMax
+        <org.wildstang.wildrank.androidv2.views.data.reefscape.comp.CompDataTeleHumanNetAlgaeAverage
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:explanation="Max number of Notes scored in the Speaker during Tele."
-            app:label="Max Speaker" />
+            app:label="Human Net Average" />
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleMadeSpeakerAverage
+        <org.wildstang.wildrank.androidv2.views.data.reefscape.comp.CompDataTeleHumanNetAlgaeMax
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:explanation="Average number of Notes scored in the Speaker during Tele."
-            app:label="Average Speaker" />
+            app:label="Human Net Max" />
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleSpeakerAccuracy
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="Overall accuracy of robot in the Speaker."
-            app:label="Speaker Accuracy" />
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleMadeAmpMax
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="Max number of Notes scored in the Amp during Tele."
-            app:label="Max Amp" />
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleMadeSpeakerMax-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="Max number of Notes scored in the Speaker during Tele."-->
+<!--            app:label="Max Speaker" />-->
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleMadeAmpAverage
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="Average number of Notes scored in the Amp during Tele."
-            app:label="Average Amp" />
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleMadeSpeakerAverage-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="Average number of Notes scored in the Speaker during Tele."-->
+<!--            app:label="Average Speaker" />-->
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTelePassesMax
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="Max number of passes done during Tele."
-            app:label="Max Passes" />
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleSpeakerAccuracy-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="Overall accuracy of robot in the Speaker."-->
+<!--            app:label="Speaker Accuracy" />-->
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTelePassesAverage
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="Average number of passes done during Tele."
-            app:label="Average Passes" />
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleMadeAmpMax-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="Max number of Notes scored in the Amp during Tele."-->
+<!--            app:label="Max Amp" />-->
+
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleMadeAmpAverage-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="Average number of Notes scored in the Amp during Tele."-->
+<!--            app:label="Average Amp" />-->
+
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTelePassesMax-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="Max number of passes done during Tele."-->
+<!--            app:label="Max Passes" />-->
+
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTelePassesAverage-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="Average number of passes done during Tele."-->
+<!--            app:label="Average Passes" />-->
 
         <TextView
             android:layout_width="match_parent"
@@ -88,23 +98,23 @@
             android:textStyle="bold"
             android:text="Endgame Overview" />
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataEndStage
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="The amount of times the robot ended with nothing vs the amount of matches\nThe amount of times the robot ended parked vs the amount of matches\nThe amount of times the robot ended tipped on the charge platform vs the amount of matches\nThe amount of times the robot ended engaged on the charge platform vs the amount of matches"
-            app:label="End Stage" />
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataEndStage-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="The amount of times the robot ended with nothing vs the amount of matches\nThe amount of times the robot ended parked vs the amount of matches\nThe amount of times the robot ended tipped on the charge platform vs the amount of matches\nThe amount of times the robot ended engaged on the charge platform vs the amount of matches"-->
+<!--            app:label="End Stage" />-->
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataEndTrapsMax
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="Max amount of traps scored in a match."
-            app:label="Max Traps" />
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataEndTrapsMax-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="Max amount of traps scored in a match."-->
+<!--            app:label="Max Traps" />-->
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataEndTrapsAverage
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="Average amount of traps scored in a match."
-            app:label="Average Traps" />
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataEndTrapsAverage-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="Average amount of traps scored in a match."-->
+<!--            app:label="Average Traps" />-->
 
         <TextView
             android:layout_width="match_parent"
@@ -113,33 +123,33 @@
             android:textStyle="bold"
             android:text="Cycles Overview" />
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleMaxCycles
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="Max number of Cycles in a match."
-            app:label="Max Cycles"
-            />
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleMaxCycles-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="Max number of Cycles in a match."-->
+<!--            app:label="Max Cycles"-->
+<!--            />-->
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleAverageCycles
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="Average number of Cycles per match."
-            app:label="Average Cycles"
-            />
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleAverageCycles-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="Average number of Cycles per match."-->
+<!--            app:label="Average Cycles"-->
+<!--            />-->
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleMaxWeightedCycles
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="Max number of Cycles in a match with speaker having a weight of 1, amp having a weight of 1.25, passes having a weight of 0.6, and trap having a weight of 2."
-            app:label="Max Weighted Cycles"
-            />
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleMaxWeightedCycles-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="Max number of Cycles in a match with speaker having a weight of 1, amp having a weight of 1.25, passes having a weight of 0.6, and trap having a weight of 2."-->
+<!--            app:label="Max Weighted Cycles"-->
+<!--            />-->
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleAverageWeightedCycles
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="Average number of Cycles in a match with speaker having a weight of 1, amp having a weight of 1.25, passes having a weight of 0.6, and trap having a weight of 2."
-            app:label="Average Weighted Cycles"
-            />
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleAverageWeightedCycles-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="Average number of Cycles in a match with speaker having a weight of 1, amp having a weight of 1.25, passes having a weight of 0.6, and trap having a weight of 2."-->
+<!--            app:label="Average Weighted Cycles"-->
+<!--            />-->
 
         <TextView
             android:layout_width="match_parent"
@@ -148,46 +158,46 @@
             android:textStyle="bold"
             android:text="Averages Without Worst Match (WWM)" />
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleMadeSpeakerAverageWWM
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="Average number of Notes scored in the Speaker during Tele without the worst match."
-            app:label="Average Speaker WWM"
-            />
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleMadeSpeakerAverageWWM-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="Average number of Notes scored in the Speaker during Tele without the worst match."-->
+<!--            app:label="Average Speaker WWM"-->
+<!--            />-->
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleMadeAmpAverageWWM
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="Average number of Notes scored in the Amp during Tele without the worst match."
-            app:label="Average Amp WWM"
-            />
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleMadeAmpAverageWWM-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="Average number of Notes scored in the Amp during Tele without the worst match."-->
+<!--            app:label="Average Amp WWM"-->
+<!--            />-->
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTelePassesAverageWWM
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="The average number of passes made without the worst match"
-            app:label="Average Passes WWM"
-            />
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTelePassesAverageWWM-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="The average number of passes made without the worst match"-->
+<!--            app:label="Average Passes WWM"-->
+<!--            />-->
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataEndTrapsAverageWWM
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="The average number of traps scored without the worst match"
-            app:label="Average Traps WWM" />
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataEndTrapsAverageWWM-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="The average number of traps scored without the worst match"-->
+<!--            app:label="Average Traps WWM" />-->
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleAverageCyclesWWM
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="Average number of Cycles per match without the worst match."
-            app:label="Average Cycles WWM"
-            />
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleAverageCyclesWWM-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="Average number of Cycles per match without the worst match."-->
+<!--            app:label="Average Cycles WWM"-->
+<!--            />-->
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleAverageWeightedCyclesWWM
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="Average number of Cycles in a match with speaker having a weight of 1, amp having a weight of 1.25, passes having a weight of 0.6, and trap having a weight of 2, without the worst match."
-            app:label="Average Weighted Cycles WWM"
-            />
+<!--        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleAverageWeightedCyclesWWM-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:explanation="Average number of Cycles in a match with speaker having a weight of 1, amp having a weight of 1.25, passes having a weight of 0.6, and trap having a weight of 2, without the worst match."-->
+<!--            app:label="Average Weighted Cycles WWM"-->
+<!--            />-->
 
     </LinearLayout>
 
