Finished data collection and numerical displays, now need to rework graphs in summaries and comparisons

--- a/app/src/main/res/layout/fragment_scout_post_match.xml
+++ b/app/src/main/res/layout/fragment_scout_post_match.xml
@@ -45,8 +45,8 @@
     <org.wildstang.wildrank.androidv2.views.scouting.ScoutingSpinnerView
         android:layout_width="1095dp"
         android:layout_height="wrap_content"
-        app:key="stage"
-        app:label="Stage"
+        app:key="barge"
+        app:label="Barge"
         app:values="@array/staging"
         android:layout_above="@+id/notes"
         android:layout_marginBottom="20dp"
